# kirppu

./: .gitattributes  .gitignore  .travis.yml  Dockerfile  LICENSE.txt  README.md  constraints.txt  docker-compose.prod-example.yml  docker-compose.yml  make_api_stub.py  makefile  pyproject.toml  requirements-dev.txt  requirements-github.txt  requirements-production.txt
.github/workflows/: test.yml
kirppu/: admin.py  checkout_api.py  fields.py  forms.py  gulpfile.js  models.py  package-lock.json  package.json  pipeline.js  urls.py  utils.py  views.py
kirppu/fixtures/: dev_data.json
kirppu/management/commands/: docker_start.py
kirppu/migrations/: 0027_allow_blank_clerk_user.py  0036_add_receipt_vendor_constraint.py  0045_add_accounts.py  0049_event_registration_start_and_more.py  0050_vendor_bank_information.py
kirppu/static_src/css/: boxes.css  checkout.css  general.css  price_tags.css
kirppu/static_src/js/: price_tags.coffee  stats.coffee  terms.js
kirppu/static_src/jst/: item_search_form.jsx  vendor_list.jsx  (+1 more)
kirppu/templatetags/: kirppu_tags.py
kirppu/tests/: api_access.py  conftest.py  factories.py  test_accounts.py  test_event_management.py  test_events.py  test_frontpage.py  test_itemdump.py  test_persons.py  test_provision.py  test_receipt_removals.py  test_states.py  test_text_engine.py  test_vendor_views.py
kirppu/text_engine/: __init__.py  colorizer.py  variables.py
kirppu/views/: mobile.py  monolithic.py  ui_text_utils.py
kirppu_project/: settings.py
kirppuauth/: urls.py
kompassi_oauth2/: views.py
scripts/: dev-frontend-entrypoint.sh
(+22 files in other folders)
