[project]
name = "kirppu"
description = "Second-hand sales POS and vendor signup for conventions"
version = "0"
requires-python = ">=3.11"

dependencies = [
    "django-environ~=0.12.0",
    "django-ipware~=7.0.0",
    "django-ratelimit~=4.0",
    "django~=5.2.0",
    "pillow~=12.0",
    "pubcode~=1.1.0",
    "mistune~=3.2.0",
    "whitenoise~=6.11.0",
]


[project.optional-dependencies]
oauth = [
    "requests~=2.30",
    "requests-oauthlib~=2.0.0",
    "oauthlib~=3.3.0",
]
production = [
    "gunicorn~=25.0",
    "psycopg[c]~=3.3.0",
]
dev = [
    "factory-boy~=3.3.0",
    "Faker~=40.1",
    "pytest~=9.0.0",
    "pytest-django~=4.11.0",
    "pytest-env~=1.2.0",
    "pytest-cov~=7.0",
]


[tool.isort]
profile = "black"
atomic = true
indent = 4
line_length = 120
no_sections = false
skip_glob = [
    "*/migrations/*",
    "/node_modules*/*",
    "/private/*",
    "/KirppuVenv*/*",
    "/venv*/*",
]
wrap_length = 120


[tool.pytest.ini_options]
addopts = "--tb=short"
norecursedirs = "*.egg .* .git build dist node_modules* venv KirppuVenv* {arch} private kompassi*"
DJANGO_SETTINGS_MODULE = "kirppu_project.settings"


[build-system]
requires = [
    "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
include = [
    "kirppu.*",
    "kirppu_project",
    "kirppuauth.*",
    "kompassi_crowd",
    "kompassi_oauth2",
]

[tool.uv]
package = false
